feat: Update Docker Compose to include PgAdmin.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,39 @@
 services:
+
   postgres:
+    container_name: postgres_docker_compose_support
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      #Specifies a name for your database or defaults to the POSTGRES_USER value when left blank.
+      POSTGRES_DB: event_db
+      #Specifies a user with superuser privileges and a database with the same name. Postgres uses the default user when this is empty.
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
+    volumes:
+      - ../postgresData:/data/postgres
     ports:
       - '5432'
+    restart: unless-stopped
+
+  pgadmin:
+    container_name: pgAdmin_docker_compose_support
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: rt.sotolani@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_LISTEN_PORT: 5050
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
+    volumes:
+      - ../pgadmin:/var/lib/pgadmin
+      - ./docker_pgadmin_servers.json:/pgadmin4/servers.json
+    ports:
+      - '5050:5050'
+    entrypoint:
+      - "/bin/sh"
+      - "-c"
+      - "/bin/echo 'postgres:5432:*:admin:password' > /tmp/pgpassfile && chmod 600 /tmp/pgpassfile && /entrypoint.sh"
+
+volumes:
+  postgres:
+  pgadmin:
